--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -44,7 +44,8 @@
   </head>
   <body>
     <div class="container">
-      {% include navbar.html %}
+      {% include navbar.html %
+      {% include workshop_ad.html %} 
 {{ content }}
       {% include workshop_footer.html %}
     </div>
