--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -46,6 +46,7 @@
     <div class="container">
       {% include navbar.html %
       {% include workshop_ad.html %} 
+	{% include banner.html %}
 {{ content }}
       {% include workshop_footer.html %}
     </div>
