--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <div class="container">
-      {% include navbar.html %
+      {% include navbar.html %}
       {% include workshop_ad.html %} 
 	{% include banner.html %}
 {{ content }}
