--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="col-xs-3 col-md-3 column banner">
 	  <a href="http://www.epcc.ed.ac.uk" title="EPCC">
-	    <img alt="Software Carpentry banner" src="{{page.root}}/img/epcc-25-logo.png" />
+	    <img alt="Software Carpentry banner" src="{{page.root}}/img/epcc-logo.png" />
 	  </a>
 	</div>
 	<div class="col-xs-3 col-md-3 column banner">
